--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,88 @@ color: #FFFFFF;
   list-style-type: none;
 }
 
+
+.photo-grid {
+  width: 928px;
+  height: 942px;
+  display: grid;
+  gap: 14px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  grid-template-columns: repeat(3, 300px);
+  grid-template-rows: repeat(4, 225px);
+  margin: auto;
+}
+.photo-grid__image {
+  width: 300px;
+  height: 225px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+/*
+.regions {
+  width: 928px;
+  height: 3292;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.region {
+  width: 928px;
+  height: 640;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.region__name {
+
+}*/
+
+.regions {
+  width: 928px;
+  height: 3292;
+  margin: 50px auto;
+}
+.region__conteiner {
+  display: grid;
+  grid-template-columns: 440px 450px;
+  grid-template-rows: 152px 174px 232px;
+  justify-content: space-between;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.region__title {
+  display: grid;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 106px;
+  color: #FFFFFF;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .cover {
   position: relative;
 
