--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
-* body, page, section, grid, table, footer, footer-content, div, p, h1, h2, h4, a, img {border: 1px solid red;} 
+/** body,
+page,
+section,
+grid,
+table,
+footer,
+footer-content,
+div,
+p,
+h1,
+h2,
+h4,
+a,
+img {
+  border: 1px solid red;
+}*/
 
 @font-face {
   font-family: 'Inter';
@@ -22,7 +37,7 @@
 }
 
 .body {
-  background-color: black;
+  background-color: #2A2C2F;
   margin: 0;
   padding: 0;
 }
@@ -47,11 +62,13 @@
   width: 176px;
   height: 52px;
 }
+
 .header__lang {
   align-self: flex-end;
-  
-  }
-.header__lang_ru {
+
+}
+
+.header__lang-ru {
   width: 30px;
   height: 28px;
   font-family: 'Inter';
@@ -62,17 +79,18 @@
   text-align: right;
   color: #FFFFFF;
 }
-.header__lang_en {
+
+.header__lang-en {
   width: 29px;
   height: 28px;
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 117%;
-text-align: right;
-text-decoration: none;
-color: #FFFFFF;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 117%;
+  text-align: right;
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .message {
@@ -84,11 +102,12 @@ color: #FFFFFF;
   justify-content: space-between;
   align-items: center;
 }
+
 .message__title {
   width: 720px;
   height: 200px;
   font-family: "Inter"
-  font-style: normal;
+    font-style: normal;
   font-weight: 900;
   font-size: 96px;
   line-height: 104%;
@@ -96,11 +115,12 @@ color: #FFFFFF;
   text-align: center;
   margin: 0 auto;
 }
+
 .message__subtitle {
   width: 600px;
   height: 72px;
   font-family: "Inter"
-  font-style: normal;
+    font-style: normal;
   font-weight: 400;
   font-size: 30px;
   line-height: 120%;
@@ -108,12 +128,14 @@ color: #FFFFFF;
   text-align: center;
   margin: 0 auto;
 }
+
 .message__polka {
   width: 928px;
   height: 580px;
   object-fit: cover;
   margin: 0;
 }
+
 .message__text {
   width: 168px;
   height: 14px;
@@ -138,11 +160,13 @@ color: #FFFFFF;
   justify-content: flex-start;
   align-items: flex-start;
 }
+
 .infor__content {
-  width: 690px;  
+  width: 690px;
   /*height: 429px;*/
-  
+
 }
+
 .infor__title {
   width: 690ps;
   height: 58px;
@@ -153,6 +177,7 @@ color: #FFFFFF;
   line-height: 107%;
   color: #FFFFFF;
 }
+
 /*.infor__blockquote {
   margin: 0;
   width: 690px;
@@ -166,6 +191,7 @@ color: #FFFFFF;
   line-height: 163%;
   color: #FFFFFF;
 }
+
 .infor__digits {
   width: 690px;
   /*height: 90px;*/
@@ -179,6 +205,7 @@ color: #FFFFFF;
   margin: 0;
   list-style-type: none;
 }
+
 .infor__digits-text {
   font-family: 'Inter';
   font-style: normal;
@@ -202,6 +229,7 @@ color: #FFFFFF;
   grid-template-rows: repeat(4, 225px);
   margin: 0 auto;
 }
+
 .photo-grid__image {
   min-width: 300px;
   height: 225px;
@@ -211,10 +239,11 @@ color: #FFFFFF;
   margin: 0 auto;
 }
 
-.regions {
+.region {
   width: 928px;
   margin: 50px auto;
 }
+
 .region__conteiner {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -226,9 +255,11 @@ color: #FFFFFF;
   margin: 0;
   padding: 0;
 }
+
 .region__links {
   align-self: self-end;
 }
+
 .region__title {
   font-family: 'Inter';
   font-style: normal;
@@ -238,6 +269,7 @@ color: #FFFFFF;
   color: #FFFFFF;
   margin: 0;
 }
+
 .region__url {
   font-family: 'Inter';
   font-style: normal;
@@ -247,6 +279,7 @@ color: #FFFFFF;
   letter-spacing: 2px;
   color: #AAAAAA;
 }
+
 .region__link {
   font-family: 'Inter';
   font-style: normal;
@@ -256,6 +289,7 @@ color: #FFFFFF;
   text-decoration-line: underline;
   color: #FFFFFF;
 }
+
 .region__image {
   width: 440px;
   height: 440px;
@@ -263,6 +297,7 @@ color: #FFFFFF;
   margin: 0;
   padding: 0;
 }
+
 .region__nature {
   font-family: 'Inter';
   font-style: normal;
@@ -287,18 +322,21 @@ color: #FFFFFF;
 
   z-index: 0;
 }
+
 .cover:hover {
   background-color: #2A2C2F;
   opacity: 0.3;
 }
+
 .cover__content {
-  
+
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: auto;
   z-index: 1;
 }
+
 .cover__title {
   margin: 0;
   height: 152px;
@@ -312,6 +350,7 @@ color: #FFFFFF;
   color: #FFFFFF;
   z-index: 1;
 }
+
 .cover__subtitle {
   padding: 0;
   margin: 0;
@@ -335,6 +374,7 @@ color: #FFFFFF;
   padding: 0;
 
 }
+
 .footer-columns {
   width: 928px;
   height: 18px;
@@ -344,12 +384,14 @@ color: #FFFFFF;
   align-items: flex-start;
   margin: 50px 0;
 }
+
 .footer__column-links {
   display: flex;
   padding: 0;
   margin: 0;
   list-style-type: none;
 }
+
 .footer__column-maps {
   width: 50px;
   height: 18px;
@@ -363,6 +405,7 @@ color: #FFFFFF;
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-pogoda {
   width: 57px;
   height: 18px;
@@ -376,6 +419,7 @@ color: #FFFFFF;
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-rasp {
   width: 94px;
   height: 18px;
@@ -389,6 +433,7 @@ color: #FFFFFF;
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-calendar {
   width: 86px;
   height: 18px;
@@ -402,6 +447,7 @@ color: #FFFFFF;
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-travel {
   width: 106px;
   height: 18px;
@@ -415,6 +461,7 @@ color: #FFFFFF;
   padding: 0;
   margin: 0;
 }
+
 /*.footer__column_content_copiright {
 
 }*/
@@ -469,9 +516,7 @@ color: #FFFFFF;
 }
 
 @media screen and (max-width: 320px) {
-  .cover {
-
-  }
+  .cover {}
 
   .cover__content {
     padding: 20px 16px;
