--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-/** body,
+* body,
 page,
 section,
 grid,
 table,
 footer,
+infor,
 footer-content,
 div,
 p,
@@ -13,27 +14,33 @@ h4,
 a,
 img {
   border: 1px solid red;
-}*/
+}
 
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  src: url(./fonts/Inter-ExtraBold.otf)
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  src: url(./fonts/Inter-Black.otf)
+}
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  src: url('https://fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7W0Q5nw.woff2') format('woff2');
+  src: url(./fonts/Inter-Regular.otf)
 }
-
 @font-face {
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 900;
-  src: url('https://fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7W0Q5nw.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Times New Roman';
-  font-style: normal;
-  font-weight: 900;
-  src: url('https://fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7W0Q5nw.woff2') format('woff2');
+  font-weight: normal;
+  src: url(./fonts/Inter-Medium.otf)
 }
 
 .body {
@@ -44,8 +51,8 @@ img {
 
 .page {
   font-family: 'Inter', 'Arial', sans-serif;
-  max-width: 1024px;
-  margin: 0 auto;
+  max-width: 1280px;
+  margin: 0;
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -55,7 +62,7 @@ img {
 }
 
 .header {
-  width: 928px;
+  max-width: 1184px;
   height: 52px;
   display: flex;
   flex-direction: row;
@@ -65,18 +72,17 @@ img {
 }
 
 .header__img {
-  width: 176px;
-  height: 52px;
+  max-width: 176px;
+  max-height: 52px;
 }
 
 .header__lang {
   align-self: flex-end;
-
 }
 
-.header__lang-ru {
-  width: 30px;
-  height: 28px;
+.header__lang-ru_active {
+  max-width: 30px;
+  max-width: 28px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -87,8 +93,8 @@ img {
 }
 
 .header__lang-en {
-  width: 29px;
-  height: 28px;
+  max-width: 29px;
+  max-height: 28px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -100,8 +106,8 @@ img {
 }
 
 .message {
-  width: 928px;
-  height: 962px;
+  max-width: 984px;
+  /*height: 962px;*/
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -110,10 +116,10 @@ img {
 }
 
 .message__title {
-  width: 720px;
-  height: 200px;
-  font-family: "Inter"
-    font-style: normal;
+  max-width: 720px;
+  max-height: 200px;
+  font-family: 'Inter';
+  font-style: normal;
   font-weight: 900;
   font-size: 96px;
   line-height: 104%;
@@ -123,11 +129,11 @@ img {
 }
 
 .message__subtitle {
-  width: 600px;
-  height: 72px;
-  font-family: "Inter"
-    font-style: normal;
-  font-weight: 400;
+  max-width: 640px;
+  max-height: 72px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
   font-size: 30px;
   line-height: 120%;
   color: #FFFFFF;
@@ -136,15 +142,15 @@ img {
 }
 
 .message__polka {
-  width: 928px;
+  max-width: 984px;
   /*height: 580px;*/
   object-fit: cover;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .message__text {
-  width: 168px;
-  height: 14px;
+  max-width: 168px;
+  /*height: 14px;*/
   align-self: flex-start;
   font-family: 'Inter';
   font-style: normal;
@@ -159,8 +165,8 @@ img {
 
 
 .infor {
-  width: 928px;
-  margin: 50px auto;
+  max-width: 984px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -168,14 +174,14 @@ img {
 }
 
 .infor__content {
-  width: 690px;
+  max-width: 690px;
   /*height: 429px;*/
 
 }
 
 .infor__title {
-  width: 690ps;
-  height: 58px;
+  max-width: 690ps;
+  max-height: 58px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
@@ -194,7 +200,7 @@ img {
 }
 
 .infor__digits {
-  width: 690px;
+  max-width: 690px;
   padding: 0;
   margin: 0;
   list-style-type: none;
@@ -212,30 +218,30 @@ img {
 }
 
 .photo-grid {
-  width: 928px;
+  max-width: 1184px;
   /*height: 942px;*/
   display: grid;
-  gap: 14px;
+  gap: 16px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  grid-template-columns: repeat(3, minmax(300px, 1fr)); /*надо ли так делать*/
-  grid-template-rows: repeat(4, 225px);
-  grid-auto-flow: row;
-  margin: 0 auto;
+  grid-template-columns: repeat(4, 284px); 
+  grid-template-rows: repeat(3, 213px);
+  margin: auto;
 }
 
+
 .photo-grid__image {
-  min-width: 300px;
-  height: 225px;
+  max-width: 284px;
+  max-height: 213px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .region {
-  width: 928px;
+  max-width: 984px;
   margin: 50px auto;
 }
 
@@ -251,6 +257,7 @@ img {
   padding: 0;
 }
 
+
 .region__links {
   align-self: self-end;
 }
@@ -260,7 +267,7 @@ img {
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 106px;
+  line-height: 1.5;
   color: #FFFFFF;
   margin: 0;
 }
@@ -312,12 +319,25 @@ img {
   background-repeat: no-repeat;
   background-position: center;
 
-  width: 1024px;
-  height: 640px;
+  max-width: 1184px;
+  min-height: 740px;
 
   z-index: 0;
 }
+.cover::before {
+  content: '';
 
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+
+  background-color: #2A2C2F;
+  opacity: 0.3;
+
+  transition: opacity 0.3s;
+}
 .cover:hover {
   background-color: #2A2C2F;
   opacity: 0.3;
@@ -329,10 +349,11 @@ img {
   margin: auto;
   z-index: 1;
 }
+
 .cover__title {
   margin: 0;
-  height: 152px;
-  width: 500px;
+  /*height: 152px;*/
+  max-width: 500px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
@@ -340,13 +361,13 @@ img {
   line-height: 106%;
   text-align: center;
   color: #FFFFFF;
-  z-index: 1;
+  z-index: 2;
 }
 .cover__subtitle {
   padding: 0;
   margin: 0;
-  width: 360px;
-  height: 66px;
+  max-width: 360px;
+  /*height: 66px;*/
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -354,7 +375,7 @@ img {
   line-height: 122%;
   text-align: center;
   color: #FFFFFF;
-  z-index: 1;
+  z-index: 2;
 }
 .footer {
   display: flex;
@@ -363,9 +384,9 @@ img {
   padding: 0;
 
 }
-.footer-columns {
-  width: 928px;
-  height: 18px;
+.footer__columns {
+  min-width: 1184px;
+  min-height: 18px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -377,6 +398,7 @@ img {
   padding: 0;
   margin: 0;
   list-style-type: none;
+  flex-wrap: wrap; /*to confirm*/
 }
 .footer__column-maps {
   width: 50px;
@@ -444,7 +466,7 @@ img {
   margin: 0;
 }
 .footer__column-author {
-  width: 186px;
+  min-width: 186px; /*to confirm*/
   height: 16px;
   font-family: 'Inter';
   font-style: normal;
@@ -455,8 +477,7 @@ img {
   margin: 0;
 }
 
-/* Адаптив */
-/* 1024 включено в интервал */
+/*
 @media screen and (max-width: 1280px) {
   .cover__content {
     padding: 190px 90px 157px 90px;
@@ -532,19 +553,41 @@ img {
     font-size: 12px;
     line-height: 14px;
   }
-}
+}*/
 
-.cover::before {
-  content: '';
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-
-  background-color: #2A2C2F;
-  opacity: 0.3;
-
-  transition: opacity 0.3s;
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .page {
+    max-width: 1024px;
+  }
+  .header {
+    max-width: 928px;
+  }
+  .message {
+    max-width: 928px;
+  }
+  .message__polka {
+    max-width: 928px;
+  }
+  .infor {
+    max-width: 928px;
+  }
+  .photo-grid {
+    max-width: 928px;
+    grid-template-columns: repeat(3, 300px); 
+    grid-template-rows: repeat(4, 225px);
+    gap: 14px;
+  }
+  .photo-grid__image {
+    max-width: 300px;
+    max-height: 225px;
+  }
+  .region {
+    max-width: 928px;
+  }
+  .cover {
+    max-width: 924px;
+    min-height: 640px;
+  }
+  .footer__columns {
+    min-width:928px;
 }
