--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* body,
+/** body,
 page,
 section,
 grid,
@@ -14,7 +14,7 @@ h4,
 a,
 img {
   border: 1px solid red;
-}
+}*/
 
 
 @font-face {
@@ -30,12 +30,14 @@ img {
   font-weight: 700;
   src: url(./fonts/Inter-Black.otf)
 }
+
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   src: url(./fonts/Inter-Regular.otf)
 }
+
 @font-face {
   font-family: 'Inter';
   font-style: normal;
@@ -52,7 +54,7 @@ img {
 .page {
   font-family: 'Inter', 'Arial', sans-serif;
   max-width: 1280px;
-  margin: 0;
+  margin: 0 auto;
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -175,8 +177,8 @@ img {
 
 .infor__content {
   max-width: 690px;
-  /*height: 429px;*/
-
+  /*min-height: 429px;*/
+  margin-bottom: 25px auto;
 }
 
 .infor__title {
@@ -201,6 +203,7 @@ img {
 
 .infor__digits {
   max-width: 690px;
+  min-height: 90px;
   padding: 0;
   margin: 0;
   list-style-type: none;
@@ -209,7 +212,7 @@ img {
 .infor__digits-text {
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 700;
+  font-weight: normal;
   font-size: 12px;
   line-height: 150%;
   color: #FFFFFF;
@@ -225,7 +228,7 @@ img {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  grid-template-columns: repeat(4, 284px); 
+  grid-template-columns: repeat(4, 284px);
   grid-template-rows: repeat(3, 213px);
   margin: auto;
 }
@@ -249,7 +252,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: min-content min-content;
-  gap: 19px;
+  gap: 26px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -324,6 +327,7 @@ img {
 
   z-index: 0;
 }
+
 .cover::before {
   content: '';
 
@@ -338,10 +342,12 @@ img {
 
   transition: opacity 0.3s;
 }
+
 .cover:hover {
   background-color: #2A2C2F;
   opacity: 0.3;
 }
+
 .cover__content {
   display: flex;
   flex-direction: column;
@@ -363,6 +369,7 @@ img {
   color: #FFFFFF;
   z-index: 2;
 }
+
 .cover__subtitle {
   padding: 0;
   margin: 0;
@@ -377,6 +384,7 @@ img {
   color: #FFFFFF;
   z-index: 2;
 }
+
 .footer {
   display: flex;
   justify-content: space-around;
@@ -384,6 +392,7 @@ img {
   padding: 0;
 
 }
+
 .footer__columns {
   min-width: 1184px;
   min-height: 18px;
@@ -393,13 +402,15 @@ img {
   align-items: flex-start;
   margin: 50px 0;
 }
+
 .footer__column-links {
   display: flex;
   padding: 0;
   margin: 0;
   list-style-type: none;
-  flex-wrap: wrap; /*to confirm*/
+  /*flex-wrap: wrap; to confirm*/
 }
+
 .footer__column-maps {
   width: 50px;
   height: 18px;
@@ -413,6 +424,7 @@ img {
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-pogoda {
   width: 57px;
   height: 18px;
@@ -426,6 +438,7 @@ img {
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-rasp {
   width: 94px;
   height: 18px;
@@ -439,6 +452,7 @@ img {
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-calendar {
   width: 86px;
   height: 18px;
@@ -452,6 +466,7 @@ img {
   padding: 0;
   margin: 0 10px 0 0;
 }
+
 .footer__column-travel {
   width: 106px;
   height: 18px;
@@ -465,8 +480,10 @@ img {
   padding: 0;
   margin: 0;
 }
+
 .footer__column-author {
-  min-width: 186px; /*to confirm*/
+  min-width: 186px;
+  /*to confirm*/
   height: 16px;
   font-family: 'Inter';
   font-style: normal;
@@ -559,35 +576,414 @@ img {
   .page {
     max-width: 1024px;
   }
+
   .header {
     max-width: 928px;
   }
+
   .message {
     max-width: 928px;
   }
+
   .message__polka {
     max-width: 928px;
   }
+
   .infor {
     max-width: 928px;
   }
+
   .photo-grid {
     max-width: 928px;
-    grid-template-columns: repeat(3, 300px); 
+    grid-template-columns: repeat(3, 300px);
     grid-template-rows: repeat(4, 225px);
     gap: 14px;
   }
+
   .photo-grid__image {
     max-width: 300px;
     max-height: 225px;
   }
+
   .region {
     max-width: 928px;
   }
+
   .cover {
     max-width: 924px;
     min-height: 640px;
   }
+
   .footer__columns {
-    min-width:928px;
+    min-width: 928px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .page {
+    max-width: 768px;
+  }
+
+  .header {
+    max-width: 720px;
+  }
+
+  .message {
+    max-width: 768px;
+  }
+
+  /*.message__title {
+    font-size: 58px;
+  }
+  .message__subtitle {
+    font-size: 16px;
+  }*/
+  .message__polka {
+    max-width: 768px;
+  }
+
+  .infor {
+    max-width: 720px;
+  }
+
+  .photo-grid {
+    max-width: 720x;
+    grid-template-columns: repeat(2, 352px);
+    grid-template-rows: repeat(6, 264px);
+    gap: 16px;
+  }
+
+  .photo-grid__image {
+    max-width: 352px;
+    max-height: 264px;
+  }
+
+  .region {
+    max-width: 720px;
+  }
+
+  .region__title {
+    font-size: 42px;
+  }
+
+  .region__nature {
+    font-size: 16px;
+  }
+
+  .region__conteiner {
+    gap: 25px;
+  }
+
+  .region__image {
+    max-width: 340px;
+    max-height: 340px;
+  }
+
+  .cover {
+    max-width: 768px;
+    min-height: 480px;
+  }
+
+  .footer__columns {
+    min-width: 720px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .page {
+    max-width: 425px;
+  }
+
+  .header {
+    max-width: 400px;
+  }
+
+  .header__img {
+    max-width: 142px;
+    max-height: 42px;
+  }
+
+  .header__lang-ru_active {
+    max-width: 22px;
+    max-height: 20px;
+    font-size: 16px;
+  }
+
+  .header__lang-en {
+    max-width: 22px;
+    max-height: 20px;
+    font-size: 16px;
+  }
+
+  .message {
+    max-width: 425px;
+  }
+
+  .message__title {
+    font-size: 40px;
+    max-width: 400px;
+  }
+
+  .message__subtitle {
+    font-size: 18px;
+    max-width: 300px;
+  }
+
+  .message__polka {
+    max-width: 425px;
+    min-height: 266px;
+  }
+
+  .message__text {
+    max-width: 190px;
+    padding: 0 0 0 16px;
+    font-size: 12px;
+  }
+
+  .infor {
+    max-width: 400px;
+  }
+
+  .infor__title {
+    font-size: 36px;
+    line-height: 107%;
+    color: #FFFFFF;
+  }
+
+  .infor__quote {
+    font-size: 12px;
+  }
+
+  .infor__digits-text {
+    font-size: 8px;
+  }
+
+  .photo-grid {
+    max-width: 400x;
+    grid-template-columns: 393px;
+    grid-template-rows: repeat(12, 300px);
+    gap: 15px;
+    padding: 0 16px;
+  }
+
+  .photo-grid__image {
+    max-width: 393px;
+    max-height: 300px;
+  }
+
+  .region {
+    max-width: 425px;
+  }
+
+  .region__conteiner {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content;
+    gap: 26px;
+  }
+
+  .region__title {
+    font-size: 42px;
+    padding: 16px;
+  }
+
+  .region__links {
+    padding: 16px;
+  }
+
+  .region__nature {
+    font-size: 16px;
+    padding: 16px;
+  }
+
+  .region__image {
+    max-width: 425px;
+    max-height: 425px;
+  }
+
+  .cover {
+    max-width: 425px;
+    min-height: 380px;
+  }
+
+  .cover__title {
+    max-width: 300px;
+    font-size: 40px;
+  }
+
+  .cover__subtitle {
+    max-width: 280px;
+    font-size: 10px;
+  }
+
+  .footer__columns {
+    min-width: 425px;
+    flex-direction: column;
+  }
+
+  .footer__column-links {
+    flex-direction: column;
+    margin: 25px;
+  }
+
+  .footer__column-maps {
+    margin: 0 0 25px 0;
+  }
+
+  .footer__column-author {
+    margin: 0 0 0 25px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .page {
+    max-width: 320px;
+  }
+
+  .header {
+    max-width: 288px;
+  }
+
+  .header__img {
+    max-width: 142px;
+    max-height: 42px;
+  }
+
+  .header__lang-ru_active {
+    max-width: 22px;
+    max-height: 20px;
+    font-size: 16px;
+  }
+
+  .header__lang-en {
+    max-width: 22px;
+    max-height: 20px;
+    font-size: 16px;
+  }
+
+  .message {
+    max-width: 320px;
+  }
+
+  .message__title {
+    font-size: 40px;
+    max-width: 288px;
+  }
+
+  .message__subtitle {
+    font-size: 12px;
+    max-width: 238px;
+  }
+
+  .message__polka {
+    max-width: 320px;
+    /*min-height: 200px;*/
+  }
+
+  .message__text {
+    max-width: 164px;
+    padding: 0 0 0 16px;
+    font-size: 10px;
+  }
+
+  .infor {
+    max-width: 320px;
+  }
+
+  .infor__content {
+    max-width: 288px;
+    padding: 16px;
+  }
+
+  .infor__title {
+    font-size: 32px;
+    max-width: 288px;
+    line-height: 107%;
+    color: #FFFFFF;
+  }
+
+  .infor__quote {
+    font-size: 16px;
+    max-width: 288px;
+  }
+
+  .infor__digits-text {
+    font-size: 10x;
+    max-width: 288px;
+  }
+
+  .photo-grid {
+    max-width: 288x;
+    grid-template-columns: 320px;
+    grid-template-rows: repeat(12, 216px);
+    gap: 15px;
+    padding: 0 16px;
+  }
+
+  .photo-grid__image {
+    max-width: 288px;
+    max-height: 216px;
+
+  }
+
+  .region {
+    max-width: 320px;
+  }
+
+  .region__conteiner {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content;
+    gap: 32px;
+  }
+
+  .region__title {
+    font-size: 42px;
+    padding: 16px;
+  }
+
+  .region__links {
+    padding: 16px;
+  }
+
+  .region__nature {
+    font-size: 16px;
+    padding: 16px;
+  }
+
+  .region__image {
+    max-width: 320px;
+    max-height: 320px;
+  }
+
+  .cover {
+    max-width: 320px;
+    min-height: 200px;
+  }
+
+  .cover__title {
+    max-width: 288px;
+    font-size: 32px;
+  }
+
+  .cover__subtitle {
+    max-width: 288px;
+    font-size: 14px;
+  }
+
+  .footer__columns {
+    min-width: 288px;
+    flex-direction: column;
+  }
+
+  .footer__column-links {
+    flex-direction: column;
+    margin: 25px;
+  }
+
+  .footer__column-maps {
+    margin: 0 0 25px 0;
+  }
+
+  .footer__column-author {
+    margin: 0 0 0 25px;
+  }
 }
