--- a/blocks/message/__polka/polka.css
+++ b/blocks/message/__polka/polka.css
@@ -4,3 +4,26 @@
     object-fit: cover;
     margin: 0;
   }
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+    .message__polka {
+      max-width: 928px;
+    }
+  }
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+      .message__polka {
+        max-width: 768px;
+      }
+          }  
+    @media screen and (min-width: 425px) and (max-width: 768px) {
+      .message__polka {
+        max-width: 425px;
+        min-height: 266px;
+      }
+    }
+    @media screen and (max-width: 425px) {
+      .message__polka {
+        max-width: 320px;
+        min-height: 200px;
+      }
+    }
