--- a/blocks/region/__nature/nature.css
+++ b/blocks/region/__nature/nature.css
@@ -6,3 +6,25 @@
     line-height: 163%;
     color: #FFFFFF;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .region__nature {
+    font-size: 16px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .region__nature {
+    font-size: 16px;
+    padding: 16px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .region__nature {
+    font-size: 16px;
+    padding: 16px;
+  }
+}
