--- a/blocks/cover/__subtitle/subtitle.css
+++ b/blocks/cover/__subtitle/subtitle.css
@@ -12,3 +12,21 @@
     color: #FFFFFF;
     z-index: 1;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .cover__subtitle {
+    max-width: 280px;
+    font-size: 10px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .cover__subtitle {
+    max-width: 200px;
+    font-size: 14px;
+  }
+}
