--- a/blocks/cover/__title/title.css
+++ b/blocks/cover/__title/title.css
@@ -1,7 +1,7 @@
 .cover__title {
     margin: 0;
-    /*height: 152px;*/
-    max-width: 500px;
+    min-height: 152px;
+    max-width: 560px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
@@ -11,3 +11,23 @@
     color: #FFFFFF;
     z-index: 1;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .cover__title {
+    max-width: 300px;
+    min-height: 135px;
+    font-size: 40px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .cover__title {
+    max-width: 288px;
+    min-height: 70px;
+    font-size: 32px;
+  }
+}
