--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -9,7 +9,7 @@
     background-position: center;
   
     max-width: 1184px;
-    min-height: 640px;
+    min-height: 740px;
   
     z-index: 0;
   }
@@ -31,3 +31,31 @@
   
     transition: opacity 0.3s;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .cover {
+    max-width: 1024px;
+    min-height: 640px;
+  }
+}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .cover {
+    max-width: 768px;
+    min-height: 480px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .cover {
+    max-width: 425px;
+    min-height: 380px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .cover {
+    min-width: 320px;
+    min-height: 200px;
+  }
+}
