--- a/blocks/footer/__column/column-links/column-links.css
+++ b/blocks/footer/__column/column-links/column-links.css
@@ -5,3 +5,20 @@
     list-style-type: none;
     flex-wrap: wrap; /*to confirm*/
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .footer__column-links {
+    flex-direction: column;
+    margin: 25px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .footer__column-links {
+    flex-direction: column;
+    margin: 15px;
+  }
+}
