--- a/blocks/footer/__columns/columns.css
+++ b/blocks/footer/__columns/columns.css
@@ -7,3 +7,29 @@
     align-items: flex-start;
     margin: 50px 0;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .footer__columns {
+    min-width: 928px;
+  }
+}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer__columns {
+  min-width: 720px;
+}
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .footer__columns {
+    min-width: 425px;
+    flex-direction: column;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .footer__columns {
+    min-width: 288px;
+    flex-direction: column;
+  }
+}
