--- a/blocks/header/__img/img.css
+++ b/blocks/header/__img/img.css
@@ -2,3 +2,17 @@
     max-width: 176px;
     max-height: 52px;
   }
+
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+        
+  .header__img {
+    max-width: 142px;
+    max-height: 42px;
+  }
+  }
+  @media screen and (max-width: 425px) {
+  .header__img {
+    max-width: 142px;
+    max-height: 42px;
+  }
+}
