--- a/blocks/header/__lang-en/lang-en.css
+++ b/blocks/header/__lang-en/lang-en.css
@@ -10,3 +10,21 @@
     text-decoration: none;
     color: #FFFFFF;
   }
+  .header__lang-en:hover {
+    opacity: 0.5;
+  }
+
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .header__lang-en {
+      max-width: 22px;
+      max-height: 20px;
+      font-size: 16px;
+    }
+  }
+  @media screen and (max-width: 425px) {
+    .header__lang-en {
+      max-width: 22px;
+      max-height: 20px;
+      font-size: 16px;
+    }
+  }
