--- a/blocks/header/__lang-ru/_active/lang-ru.css
+++ b/blocks/header/__lang-ru/_active/lang-ru.css
@@ -9,3 +9,17 @@
   text-align: right;
   color: #FFFFFF;
 }
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .header__lang-ru_active {
+    max-width: 22px;
+    max-height: 20px;
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .header__lang-ru_active {
+    max-width: 22px;
+    max-height: 20px;
+    font-size: 16px;
+  }
+}
