--- a/blocks/header/__lang/lang.css
+++ b/blocks/header/__lang/lang.css
@@ -1,4 +1,13 @@
 .header__lang {
     align-self: flex-end;
-  
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .header__lang {
+    align-self: center;
+}
+@media screen and (max-width: 425px) {
+  .header__lang {
+    align-self: center;
   }
+}
