--- a/blocks/infor/__content/content.css
+++ b/blocks/infor/__content/content.css
@@ -3,3 +3,16 @@
     /*height: 429px;*/
   
   }
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+    @media screen and (min-width: 768px) and (max-width: 1023px) {}
+       
+    @media screen and (min-width: 425px) and (max-width: 768px) {}
+        
+    @media screen and (max-width: 425px) {
+      .infor__content {
+        max-width: 288px;
+        padding: 16px;
+      }
+    }
