--- a/blocks/infor/__quote/quote.css
+++ b/blocks/infor/__quote/quote.css
@@ -6,3 +6,20 @@
     line-height: 163%;
     color: #FFFFFF;
   }
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .infor__quote {
+    font-size: 12px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  {.infor__quote 
+  font-size: 16px;
+  max-width: 288px;
+}
+}
