--- a/blocks/infor/__title/title.css
+++ b/blocks/infor/__title/title.css
@@ -8,3 +8,23 @@
     line-height: 107%;
     color: #FFFFFF;
   }
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+    @media screen and (min-width: 768px) and (max-width: 1023px) {}
+       
+    @media screen and (min-width: 425px) and (max-width: 768px) {
+      .infor__title {
+        font-size: 36px;
+        line-height: 107%;
+        color: #FFFFFF;
+      }
+    }
+        
+    @media screen and (max-width: 425px) {.infor__title {
+      font-size: 32px;
+      max-width: 288px;
+      line-height: 107%;
+      color: #FFFFFF;
+    }
+  }
