--- a/blocks/message/__subtitle/subtitle.css
+++ b/blocks/message/__subtitle/subtitle.css
@@ -10,3 +10,17 @@
   text-align: center;
   margin: 0 auto;
 }
+
+  
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .message__subtitle {
+      font-size: 18px;
+      max-width: 300px;
+    }
+  }  
+  @media screen and (max-width: 425px) {
+    .message__subtitle {
+      font-size: 12px;
+      max-width: 258px;
+        }
+  }
