--- a/blocks/message/__text/text.css
+++ b/blocks/message/__text/text.css
@@ -12,3 +12,27 @@
     color: #FFFFFF;
     margin: 0;
   }
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+      .message__text {
+        padding: 0 0 0 24px;
+      }
+    } 
+    @media screen and (min-width: 425px) and (max-width: 768px) {
+      .message__text {
+        max-width: 190px;
+        padding: 0 0 0 16px;
+        font-size: 12px;
+      }
+    }  
+    @media screen and (max-width: 425px) {
+      .message__text {
+        max-width: 164px;
+        padding: 0 0 0 16px;
+        font-size: 10px;
+      }
+    }
+
+  
+  
