--- a/blocks/message/__title/title.css
+++ b/blocks/message/__title/title.css
@@ -10,3 +10,16 @@
   text-align: center;
   margin: 0 auto;
 }
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .message__title {
+    font-size: 40px;
+    max-width: 400px;
+  }
+}    
+@media screen and (max-width: 425px) {
+  .message__title {
+    font-size: 40px;
+    max-width: 288px;
+  }
+}
