--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,4 @@
-* body, 
+/** body, 
 page, 
 section,
 grid,
@@ -15,15 +15,32 @@ a,
 img {
   border: 1px solid red;
 }
-
+*/
 .page {
-    font-family: 'Inter', 'Arial', sans-serif;
-    max-width: 1280px;
-    margin: auto;
-    text-rendering: optimizeLegibility;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+  font-family: 'Inter', 'Arial', sans-serif;
+  max-width: 1280px;
+  margin: 0 auto;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+    .page {
+      max-width: 1024px;
+    }}
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .page {
+      max-width: 768px;
+    }}
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .page {
+      max-width: 425px;
+    }}
+    @media screen and (max-width: 425px) {
+      .page {
+        max-width: 320px;
+    }}
