--- a/blocks/photo-grid/__image/image.css
+++ b/blocks/photo-grid/__image/image.css
@@ -6,3 +6,31 @@
     box-sizing: border-box;
     margin: 0 auto;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .photo-grid__image {
+    max-width: 300px;
+    max-height: 225px;
+  }
+}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid__image {
+    max-width: 352px;
+    max-height: 264px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .photo-grid__image {
+    max-width: 393px;
+    max-height: 300px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .photo-grid__image {
+    max-width: 288px;
+    max-height: 216px;
+  }
+}
