--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,8 +6,47 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    grid-template-columns: repeat(4, 284px); /*надо ли так делать*/
+    grid-template-columns: repeat(4, 284px);
     grid-template-rows: repeat(3, 213px);
     grid-auto-flow: row;
     margin: 0 auto;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .photo-grid {
+    max-width: 928px;
+    grid-template-columns: repeat(3, 300px);
+    grid-template-rows: repeat(4, 225px);
+    gap: 14px;
+  }
+}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid {
+    max-width: 720x;
+    grid-template-columns: repeat(2, 352px);
+    grid-template-rows: repeat(6, 264px);
+    gap: 16px;
+    padding: 0 24px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .photo-grid {
+    max-width: 400x;
+    grid-template-columns: 400px;
+    grid-template-rows: repeat(12, 300px);
+    gap: 15px;
+    padding: 0 10px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    max-width: 288x;
+    grid-template-columns: 288px;
+    grid-template-rows: repeat(12, 216px);
+    gap: 15px;
+    padding: 0 14px;
+  }
+}
