--- a/blocks/region/__conteiner/conteiner.css
+++ b/blocks/region/__conteiner/conteiner.css
@@ -9,3 +9,27 @@
     margin: 0;
     padding: 0;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .region__conteiner {
+    gap: 25px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .region__conteiner {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content;
+    gap: 26px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .region__conteiner {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content;
+    gap: 32px;
+  }
+}
