--- a/blocks/region/__image/image.css
+++ b/blocks/region/__image/image.css
@@ -5,3 +5,26 @@
     margin: 0;
     padding: 0;
   }
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .region__image {
+      max-width: 340px;
+      max-height: 340px;
+    }
+  }
+     
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .region__image {
+      max-width: 425px;
+      max-height: 425px;
+    }
+  }
+      
+  @media screen and (max-width: 425px) {
+    .region__image {
+      max-width: 320px;
+      max-height: 320px;
+    }
+  }
