--- a/blocks/region/__links/links.css
+++ b/blocks/region/__links/links.css
@@ -1,3 +1,19 @@
 .region__links {
     align-self: self-end;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .region__links {
+    padding: 16px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .region__links {
+    padding: 16px;
+  }
+}
