--- a/blocks/region/__title/title.css
+++ b/blocks/region/__title/title.css
@@ -7,3 +7,25 @@
     color: #FFFFFF;
     margin: 0;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .region__title {
+    font-size: 42px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .region__title {
+    font-size: 42px;
+    padding: 16px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .region__title {
+    font-size: 40px;
+    padding: 14px;
+  }
+}
