--- a/blocks/region/region.css
+++ b/blocks/region/region.css
@@ -2,3 +2,27 @@
     max-width: 984px;
     margin: 50px auto;
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .region {
+    max-width: 928px;
+  }
+}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .region {
+    max-width: 720px;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .region {
+    max-width: 425px;
+  }
+}
+    
+@media screen and (max-width: 425px) {
+  .region {
+    max-width: 320px;
+  }
+}
