--- a/blocks/header/__lang/lang.css
+++ b/blocks/header/__lang/lang.css
@@ -6,6 +6,7 @@
   .header__lang {
     align-self: center;
 }
+}
 @media screen and (max-width: 425px) {
   .header__lang {
     align-self: center;
