--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -33,7 +33,7 @@
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .photo-grid {
-    max-width: 400x;
+    max-width: 400px;
     grid-template-columns: 400px;
     grid-template-rows: repeat(12, 300px);
     gap: 15px;
@@ -43,7 +43,7 @@
     
 @media screen and (max-width: 425px) {
   .photo-grid {
-    max-width: 288x;
+    max-width: 288px;
     grid-template-columns: 288px;
     grid-template-rows: repeat(12, 216px);
     gap: 15px;
