--- a/blocks/infor/__title/title.css
+++ b/blocks/infor/__title/title.css
@@ -1,5 +1,5 @@
 .infor__title {
-    max-width: 690ps;
+    max-width: 690px;
     max-height: 58px;
     font-family: 'Inter';
     font-style: normal;
