--- a/blocks/header/__lang/lang-en/lang-en.css
+++ b/blocks/header/__lang/lang-en/lang-en.css
@@ -1,4 +1,4 @@
-.header__lang-en {
+.header__lang_lang-en {
     max-width: 29px;
     max-height: 28px;
     font-family: 'Inter';
@@ -10,19 +10,19 @@
     text-decoration: none;
     color: #FFFFFF;
   }
-  .header__lang-en:hover {
+  .header__lang_lang-en:hover {
     opacity: 0.5;
   }
 
   @media screen and (min-width: 425px) and (max-width: 768px) {
-    .header__lang-en {
+    .header__lang_lang-en {
       max-width: 22px;
       max-height: 20px;
       font-size: 16px;
     }
   }
   @media screen and (max-width: 425px) {
-    .header__lang-en {
+    .header__lang_lang-en {
       max-width: 22px;
       max-height: 20px;
       font-size: 16px;
