--- a/blocks/covernew/__title/title.css
+++ b/blocks/covernew/__title/title.css
@@ -1,15 +1,17 @@
-.cover__subtitle {
-    margin: 0 auto;
-    max-width: 360px;
-    /*height: 66px;*/
+.covernew__title {
+  position: static;
+    padding: 0;
+    margin: 0;
+    /*min-height: 152px;*/
+    max-width: 560px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 122%;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 106%;
     text-align: center;
     color: #FFFFFF;
-    z-index: 2;
+    z-index: 1;
   }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {}
@@ -17,15 +19,15 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .cover__subtitle {
-    max-width: 280px;
-    font-size: 10px;
+  .covernew__title {
+    max-width: 300px;
+    font-size: 40px;
   }
 }
     
 @media screen and (max-width: 425px) {
-  .cover__subtitle {
-    max-width: 200px;
-    font-size: 14px;
+  .covernew__title {
+    max-width: 288px;
+    font-size: 32px;
   }
 }
