--- a/blocks/photo-grid/__image/image.css
+++ b/blocks/photo-grid/__image/image.css
@@ -1,6 +1,6 @@
 .photo-grid__image {
     max-width: 284px;
-    max-height: 213px;
+    /*max-height: 213px;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -10,27 +10,27 @@
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
   .photo-grid__image {
     max-width: 300px;
-    max-height: 225px;
+    /*max-height: 225px;*/
   }
 }
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .photo-grid__image {
     max-width: 352px;
-    max-height: 264px;
+    /*max-height: 264px;*/
   }
 }
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .photo-grid__image {
     max-width: 393px;
-    max-height: 300px;
+    /*max-height: 300px;*/
   }
 }
     
 @media screen and (max-width: 425px) {
   .photo-grid__image {
     max-width: 288px;
-    max-height: 216px;
+    /*max-height: 216px;*/
   }
 }
