--- a/blocks/covernew/covernew.css
+++ b/blocks/covernew/covernew.css
@@ -1,26 +1,38 @@
-.cover {
+.covernew {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin: auto;
     background-image: url('../../sprint-3-images/cover-trains.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    
+    z-index: 0;
   
     max-width: 1184px;
     min-height: 740px;
-  
-    z-index: 0;
+
+    text-decoration: none;
   }
-  .cover:hover {
+
+  .covernew::after {
+    content: "";
+    position: absolute;
+    inset: 0;
     background-color: #2A2C2F;
     opacity: 0.3;
-    z-index: 0;
   }
-  .cover::before {
+
+  .covernew:hover::after {
+    position: absolute;
+    background-color: #2A2C2F;
+    opacity: 0.7;
+    z-index: 0;
+}
+  /*.covernew::after {
     content: '';
   
     position: absolute;
@@ -33,31 +45,31 @@
     opacity: 0.3;
   
     transition: opacity 0.3s;
-  }
+  }*/
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .cover {
+  .covernew {
     max-width: 1024px;
     min-height: 640px;
   }
 }
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .cover {
+  .covernew {
     max-width: 768px;
     min-height: 480px;
   }
 }
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .cover {
+  .covernew {
     max-width: 425px;
     min-height: 380px;
   }
 }
     
 @media screen and (max-width: 425px) {
-  .cover {
+  .covernew {
     min-width: 320px;
     min-height: 200px;
   }
