--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,37 @@
 .footer {
+    max-width: 1184px;
     display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: auto;
+    padding: 50px 0;
   
+  }
+
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+    .footer {
+      max-width: 928px;
+      
+    }
+  }
+     
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .footer {
+      max-width: 720px;
+      
+    }
+  }
+     
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .footer {
+      max-width: 425px;
+      flex-direction: column;
+    }
+  }
+      
+  @media screen and (max-width: 425px) {
+    .footer {
+      max-width: 320px;
+      flex-direction: column;
+    }
   }
