--- a/blocks/region/__conteiner/conteiner.css
+++ b/blocks/region/__conteiner/conteiner.css
@@ -2,19 +2,23 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content min-content;
-    gap: 19px;
+    gap: 40px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 0;
+    margin: 80px 0;
     padding: 0;
   }
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {}
-   
+.region__conteiner {
+  gap: 32px;
+  margin: 80px 0;
+}
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .region__conteiner {
-    gap: 25px;
+    gap: 30px;
+    margin: 73px 0;
   }
 }
    
@@ -22,7 +26,8 @@
   .region__conteiner {
     grid-template-columns: 1fr;
     grid-template-rows: min-content;
-    gap: 26px;
+    gap: 28px;
+    margin: 50px 0;
   }
 }
     
@@ -31,5 +36,6 @@
     grid-template-columns: 1fr;
     grid-template-rows: min-content;
     gap: 32px;
+    margin: 32px 0;
   }
 }
