--- a/blocks/region/__image/image.css
+++ b/blocks/region/__image/image.css
@@ -1,30 +1,35 @@
 .region__image {
-    max-width: 440px;
-    max-height: 440px;
+    max-width: 460px;
+    /*max-height: 460px;*/
     object-fit: cover;
     margin: 0;
     padding: 0;
   }
 
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+    .region__image {
+      max-width: 440px;
+      /*max-height: 440px;*/
+    }
+  }
    
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     .region__image {
       max-width: 340px;
-      max-height: 340px;
+      /*max-height: 340px;*/
     }
   }
      
   @media screen and (min-width: 425px) and (max-width: 768px) {
     .region__image {
       max-width: 425px;
-      max-height: 425px;
+      /*max-height: 425px;*/
     }
   }
       
   @media screen and (max-width: 425px) {
     .region__image {
       max-width: 320px;
-      max-height: 320px;
+      /*max-height: 320px;*/
     }
   }
