--- a/pages/index.css
+++ b/pages/index.css
@@ -3,46 +3,50 @@
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__img/img.css);
+@import url(../blocks/header/__logo/logo.css);
 @import url(../blocks/header/__lang/lang.css);
-@import url(../blocks/langs/langs.css);
-@import url(../blocks/langs/__lang/lang.css);
-@import url(../blocks/langs/__lang/_active/active.css);
+
+@import url(../blocks/lang/__link/link.css);
+@import url(../blocks/lang/__link/_active/active.css);
+
 @import url(../blocks/message/message.css);
 @import url(../blocks/message/__title/title.css);
 @import url(../blocks/message/__subtitle/subtitle.css);
 @import url(../blocks/message/__polka/polka.css);
-@import url(../blocks/message/__text/text.css);
+@import url(../blocks/message/__caption/caption.css);
+
 @import url(../blocks/infor/infor.css);
 @import url(../blocks/infor/__content/content.css);
 @import url(../blocks/infor/__title/title.css);
-@import url(../blocks/infor/__quote/quote.css);
-@import url(../blocks/infor/__digits/digits.css);
-@import url(../blocks/infor/__digits-text/digits-text.css);
+@import url(/blocks/infor/__text/text.css);
+@import url(../blocks/infor/__list/list.css);
+@import url(../blocks/infor/__list-text/list-text.css);
+@import url(../blocks/infor/__digit/digit.css);
+
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__image/image.css);
+
 @import url(../blocks/region/region.css);
 @import url(../blocks/region/__conteiner/conteiner.css);
 @import url(../blocks/region/__links/links.css);
 @import url(../blocks/region/__title/title.css);
-@import url(../blocks/region/__url/url.css);
+@import url(../blocks/region/__url-heading/url-heading.css);
 @import url(../blocks/region/__link/link.css);
 @import url(../blocks/region/__image/image.css);
-@import url(../blocks/region/__nature/nature.css);
+@import url(../blocks/region/__paragraph/paragraph.css);
+
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__content/content.css);
-@import url(../blocks/cover/__title/title.css);
 @import url(../blocks/cover/__title/title.css);
 @import url(../blocks/cover/__subtitle/subtitle.css);
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__columns/columns.css);
-@import url(../blocks/footer/__column/column-links/column-links.css);
-@import url(../blocks/footer/__column/__column-maps/column-maps.css);
-@import url(../blocks/footer/__column/__column-pogoda/column-pogoda.css);
-@import url(../blocks/footer/__column/__column-rasp/column-rasp.css);
-@import url(../blocks/footer/__column/__column-calendar/__column-calendar.css);
-@import url(../blocks/footer/__column/__column-travel/column-travel.css);
-@import url(../blocks/footer/__column/__column-author/column-auther.css);
 
+@import url(../blocks/covernew/covernew.css);
+@import url(../blocks/covernew/__title/title.css);
+@import url(../blocks/covernew/__subtitle/subtitle.css);
+@import url(../blocks/covernew/__text/text.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__column/_links/_links.css);
+@import url(../blocks/footer/__column/_copyright/copyright.css);
+@import url(../blocks/footer/__link/link.css);
 
 
