--- a/blocks/covernew/__subtitle/subtitle.css
+++ b/blocks/covernew/__subtitle/subtitle.css
@@ -1,7 +1,7 @@
 .covernew__subtitle {
   position: static;
     padding: 0;
-    margin: 0;
+    margin: 40px 0 33px 0;
     max-width: 360px;
     font-family: 'Inter';
     font-style: normal;
