--- a/blocks/covernew/__title/title.css
+++ b/blocks/covernew/__title/title.css
@@ -1,7 +1,7 @@
 .covernew__title {
   position: static;
     padding: 0;
-    margin: 0;
+    margin: 114px 0 0 0;
     /*min-height: 152px;*/
     max-width: 560px;
     font-family: 'Inter';
@@ -16,18 +16,22 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1280px) {}
    
-@media screen and (min-width: 768px) and (max-width: 1023px) {}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  margin: 110px 0 0 0;
+}
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .covernew__title {
     max-width: 300px;
     font-size: 40px;
+    margin: 80px 0 0 0;
   }
 }
     
 @media screen and (max-width: 425px) {
   .covernew__title {
-    max-width: 288px;
+    max-width: 238px;
     font-size: 32px;
+    margin: 64px 0 0 0;
   }
 }
