--- a/blocks/infor/infor.css
+++ b/blocks/infor/infor.css
@@ -1,6 +1,6 @@
 .infor {
     max-width: 984px;
-    margin: 50px auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
