--- a/blocks/message/__subtitle/subtitle.css
+++ b/blocks/message/__subtitle/subtitle.css
@@ -7,19 +7,27 @@
   line-height: 120%;
   color: #FFFFFF;
   text-align: center;
-  margin: 0 auto;
+  margin: 32px auto 64px;
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  margin: 32px auto 56px;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  margin: 32px auto 56px;
+}
   
   @media screen and (min-width: 425px) and (max-width: 768px) {
     .message__subtitle {
       font-size: 18px;
       max-width: 300px;
+      margin: 32px auto 50px;
     }
   }  
   @media screen and (max-width: 425px) {
     .message__subtitle {
       font-size: 12px;
       max-width: 258px;
+      margin: 16px auto 40px;
         }
   }
