--- a/blocks/message/__title/title.css
+++ b/blocks/message/__title/title.css
@@ -7,9 +7,12 @@
   line-height: 104%;
   color: #FFFFFF;
   text-align: center;
-  margin: 0 auto;
+  margin: auto;
 }
-
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  }
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .message__title {
     font-size: 40px;
@@ -20,5 +23,5 @@
   .message__title {
     font-size: 40px;
     max-width: 288px;
-  }
+    }
 }
