Finish for notebook

--- a/blocks/footer/__links/links.css
+++ b/blocks/footer/__links/links.css
@@ -1,22 +1,22 @@
-.footer__column_links {
+.footer__links {
     display: flex;
     padding: 0;
     margin: 0;
     list-style-type: none;
   }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {}
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .footer__column_links {
+  .footer__links {
     flex-direction: column;
     margin: 25px;
   }
 }
 @media screen and (max-width: 425px) {
-  .footer__column_links {
+  .footer__links {
     flex-direction: column;
     margin: 15px;
   }
