--- a/blocks/message/__caption/caption.css
+++ b/blocks/message/__caption/caption.css
@@ -9,26 +9,26 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
     color: #FFFFFF;
-    margin: 0;
+    margin: 8px 0 0 0;
   }
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {}
    
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       .message__caption {
-        padding: 0 0 0 24px;
+        margin: 8px 0 0 24px;
       }
     } 
-    @media screen and (min-width: 425px) and (max-width: 768px) {
+    @media screen and (min-width: 425px) and (max-width: 767px) {
       .message__caption {
         max-width: 190px;
-        padding: 0 0 0 16px;
+        margin: 8px 0 0 0;
         font-size: 12px;
       }
     }  
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: 424px) {
       .message__caption {
         max-width: 164px;
-        padding: 0 0 0 16px;
+        margin: 8px 0 0 0;
         font-size: 10px;
       }
     }
