--- a/blocks/region/__link/link.css
+++ b/blocks/region/__link/link.css
@@ -6,7 +6,9 @@
     line-height: 122%;
     text-decoration-line: underline;
     color: #FFFFFF;
+    margin: 0;
+    padding: 0;
   }
   .region__link:hover {
-    opacity: 0.5;
+    opacity: 0.8;
   }
