--- a/blocks/cover/__title/title.css
+++ b/blocks/cover/__title/title.css
@@ -1,8 +1,8 @@
-.covernew__title {
-  position: static;
+.cover__title {
+    position: static;
+    text-align: center;
     padding: 0;
-    margin: 114px 0 0 0;
-    /*min-height: 152px;*/
+    margin: 245px auto 16px;
     max-width: 560px;
     font-family: 'Inter';
     font-style: normal;
@@ -14,22 +14,30 @@
     z-index: 1;
   }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .cover__title {
+    margin: 195px auto 16px;
+  }
+}
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  margin: 110px 0 0 0;
+  .cover__title {
+    .cover__title
+    margin: 115px auto 16px;
+    }
+  }
 }
    
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .covernew__title {
+  .cover__title {
     max-width: 300px;
     font-size: 40px;
-    margin: 80px 0 0 0;
+    margin: 80px 0 10px 0;
   }
 }
     
 @media screen and (max-width: 425px) {
-  .covernew__title {
+  .cover__title {
     max-width: 238px;
     font-size: 32px;
     margin: 64px 0 0 0;
