--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,10 @@
-.covernew {
+.cover {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    margin: auto;
+    margin: 92px auto;
     background-image: url('../../sprint-3-images/cover-trains.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -18,7 +18,7 @@
     text-decoration: none;
   }
 
-  .covernew::after {
+  .cover::after {
     content: "";
     position: absolute;
     inset: 0;
@@ -26,50 +26,36 @@
     opacity: 0.3;
   }
 
-  .covernew:hover::after {
+  .cover:hover::after {
     position: absolute;
     background-color: #2A2C2F;
-    opacity: 0.7;
+    opacity: 0.8;
     z-index: 0;
 }
-  /*.covernew::after {
-    content: '';
-  
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-  
-    background-color: #2A2C2F;
-    opacity: 0.3;
-  
-    transition: opacity 0.3s;
-  }*/
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .covernew {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .cover {
     max-width: 1024px;
     min-height: 640px;
   }
 }
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .covernew {
+  .cover {
     max-width: 768px;
     min-height: 480px;
   }
 }
    
-@media screen and (min-width: 425px) and (max-width: 768px) {
-  .covernew {
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .cover {
     max-width: 425px;
     min-height: 380px;
   }
 }
     
-@media screen and (max-width: 425px) {
-  .covernew {
+@media screen and (max-width: 424px) {
+  .cover {
     min-width: 320px;
     min-height: 200px;
   }
