--- a/blocks/footer/__copyright/copyright.css
+++ b/blocks/footer/__copyright/copyright.css
@@ -1,5 +1,5 @@
-.footer__column_copyright {
-    min-width: 186px; /*to confirm*/
+.footer__copyright {
+    min-width: 186px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -10,13 +10,13 @@
   }
 
   @media screen and (min-width: 425px) and (max-width: 768px) {
-    .footer__column_copyright {
+    .footer__copyright {
       margin: 0 0 0 25px;
     }
   }
       
   @media screen and (max-width: 425px) {
-    .footer__column_copyright {
+    .footer__copyright {
       margin: 0 0 0 15px;
     }
   }
