--- a/blocks/header/__lang/lang.css
+++ b/blocks/header/__lang/lang.css
@@ -1,13 +1,14 @@
 .header__lang {
     align-self: flex-end;
+    margin: 0 0 3px 0;
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .header__lang {
     align-self: center;
 }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .header__lang {
     align-self: center;
   }
