--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,11 +3,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: start;
-    margin: 0 auto;
+    align-items: center;
+    margin: 28px auto;
   }
   
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .header {
     max-width: 928px;
   }
@@ -17,13 +17,13 @@
       max-width: 720px;
     }
   }
-  @media screen and (min-width: 425px) and (max-width: 768px) {
+  @media screen and (min-width: 425px) and (max-width: 767px) {
       .header {
       max-width: 400px;
     }
   }
-  @media screen and (max-width: 425px) {
+  @media screen and (max-width: 424px) {
       .header {
-      max-width: 288px;
+      max-width: 320px;
     }
   }
