--- a/blocks/infor/__text/text.css
+++ b/blocks/infor/__text/text.css
@@ -6,19 +6,21 @@
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
+  margin: 40px 0 33px 0;
+  padding: 0;
   }
 
   @media screen and (min-width: 1024px) and (max-width: 1280px) {}
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .infor__text {
     font-size: 12px;
   }
 }
     
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .infor__text {
   font-size: 16px;
   max-width: 288px;
