--- a/blocks/infor/__title/title.css
+++ b/blocks/infor/__title/title.css
@@ -6,19 +6,22 @@
     font-size: 54px;
     line-height: 107%;
     color: #FFFFFF;
+    margin: 0;
+    padding: 0;
   }
 
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {}
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {}
    
     @media screen and (min-width: 768px) and (max-width: 1023px) {}
        
-    @media screen and (min-width: 425px) and (max-width: 768px) {
+    @media screen and (min-width: 425px) and (max-width: 767px) {
       .infor__title {
         font-size: 36px;
         }
     }
         
-    @media screen and (max-width: 425px) {.infor__title {
+    @media screen and (max-width: 425px) {
+      .infor__title {
       font-size: 32px;
       max-width: 288px;
       }
