--- a/blocks/infor/infor.css
+++ b/blocks/infor/infor.css
@@ -1,29 +1,33 @@
 .infor {
-    max-width: 984px;
-    margin: 0 auto;
+    max-width: 690px;
+    margin: 92px 0 0 147px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
   }
 
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .infor {
-      max-width: 928px;
+      max-width: 690px;
+      margin: 92px 0 0 48px;
     }
   }
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       .infor {
         max-width: 720px;
+        margin: 88px 0 0 24px;
       }
     } 
-    @media screen and (min-width: 425px) and (max-width: 768px) {
+    @media screen and (min-width: 425px) and (max-width: 767px) {
       .infor {
         max-width: 400px;
+        margin: 70px 0 0 20px;
       }
     }  
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: 424px) {
       .infor {
-        min-width: 320px;
+        min-width: 288px;
+        margin: 64px 0 0 16px;
       }
     }
