--- a/blocks/message/__polka/polka.css
+++ b/blocks/message/__polka/polka.css
@@ -4,23 +4,23 @@
     margin: 0;
   }
 
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .message__polka {
       max-width: 928px;
     }
   }
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       .message__polka {
-        max-width: 768px;
+        max-width: 100%;
       }
           }  
-    @media screen and (min-width: 425px) and (max-width: 768px) {
+    @media screen and (min-width: 425px) and (max-width: 767px) {
       .message__polka {
         max-width: 425px;
         min-height: 266px;
       }
     }
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: 424px) {
       .message__polka {
         max-width: 320px;
         min-height: 200px;
