--- a/blocks/message/__subtitle/subtitle.css
+++ b/blocks/message/__subtitle/subtitle.css
@@ -2,7 +2,7 @@
   max-width: 640px;
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 30px;
   line-height: 120%;
   color: #FFFFFF;
@@ -10,21 +10,25 @@
   margin: 32px auto 64px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .message__subtitle {
   margin: 32px auto 56px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  margin: 32px auto 56px;
+  .message__subtitle {
+    margin: 32px auto 56px;
+  }
 }
   
-  @media screen and (min-width: 425px) and (max-width: 768px) {
+  @media screen and (min-width: 425px) and (max-width: 767px) {
     .message__subtitle {
       font-size: 18px;
       max-width: 300px;
       margin: 32px auto 50px;
     }
   }  
-  @media screen and (max-width: 425px) {
+  @media screen and (max-width: 424px) {
     .message__subtitle {
       font-size: 12px;
       max-width: 258px;
