--- a/blocks/message/__title/title.css
+++ b/blocks/message/__title/title.css
@@ -7,19 +7,19 @@
   line-height: 104%;
   color: #FFFFFF;
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
 }
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   }
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .message__title {
     font-size: 40px;
     max-width: 400px;
   }
 }    
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .message__title {
     font-size: 40px;
     max-width: 288px;
