--- a/blocks/message/message.css
+++ b/blocks/message/message.css
@@ -1,28 +1,32 @@
 .message {
     max-width: 984px;
-    margin: 0 auto;
+    margin: 57px auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
   }
-  @media screen and (min-width: 1024px) and (max-width: 1280px) {
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .message {
       max-width: 928px;
+      margin: 48px auto;
     }
   }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     .message {
       max-width: 768px;
+      margin: 48px auto;
     }
   }
-  @media screen and (min-width: 425px) and (max-width: 768px) {
+  @media screen and (min-width: 425px) and (max-width: 767px) {
     .message {
       max-width: 425px;
+      margin: 48px auto;
     }
   }    
-  @media screen and (max-width: 425px) {
+  @media screen and (max-width: 424px) {
     .message {
       max-width: 320px;
+      margin: 48px auto;
     }
   }
