--- a/blocks/region/__conteiner/conteiner.css
+++ b/blocks/region/__conteiner/conteiner.css
@@ -1,38 +1,38 @@
 .region__conteiner {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 51.11%;
     grid-template-rows: min-content min-content;
-    gap: 40px;
+    gap: 47px 17px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 0 0 90px 0;
+    margin: 0 0 80px 0;
     padding: 0;
   }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
 .region__conteiner {
-  gap: 32px;
-  margin: 0 0 90px 0;
+  gap: 47px 20px;
+  margin: 0 0 80px 0;
 }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .region__conteiner {
-    gap: 30px;
+    gap: 46px 28px;
     margin: 0 0 80px 0;
   }
 }
    
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .region__conteiner {
     grid-template-columns: 1fr;
     grid-template-rows: min-content;
-    gap: 28px;
+    gap: 32px;
     margin: 0 0 60px 0;
   }
 }
     
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .region__conteiner {
     grid-template-columns: 1fr;
     grid-template-rows: min-content;
