--- a/blocks/region/__links/links.css
+++ b/blocks/region/__links/links.css
@@ -1,18 +1,20 @@
 .region__links {
     align-self: self-end;
+    margin: 0;
+    padding: 0;
   }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {}
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .region__links {
     padding: 16px;
   }
 }
     
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .region__links {
     padding: 16px;
   }
