--- a/blocks/region/__paragraph/paragraph.css
+++ b/blocks/region/__paragraph/paragraph.css
@@ -5,26 +5,26 @@
     font-size: 18px;
     line-height: 163%;
     color: #FFFFFF;
+    margin: 0;
+    padding: 0;
   }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {}
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .region__nature {
+  .region__paragraph {
     font-size: 16px;
-  }
+    }
 }
    
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .region__paragraph {
     font-size: 16px;
-    padding: 16px;
-  }
+    }
 }
     
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .region__paragraph {
     font-size: 16px;
-    padding: 16px;
-  }
+    }
 }
