--- a/blocks/region/__url-heading/url-heading.css
+++ b/blocks/region/__url-heading/url-heading.css
@@ -6,4 +6,27 @@
     line-height: 100%;
     letter-spacing: 2px;
     color: #AAAAAA;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
   }
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {}
+   
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .region__url-heading {
+    margin: 0 0 16px 0;
+  }
+}
+   
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .region__url-heading {
+    margin: 0 0 50px 0;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .region__url-heading {
+    font-size: 40px;
+   
+  }
+}
