--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,9 +4,9 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 92px auto;
+    margin: 87px auto;
     background-image: url('../../sprint-3-images/cover-trains.jpg');
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     
@@ -14,6 +14,7 @@
   
     max-width: 1184px;
     min-height: 740px;
+    
 
     text-decoration: none;
   }
@@ -24,6 +25,7 @@
     inset: 0;
     background-color: #2A2C2F;
     opacity: 0.3;
+    
   }
 
   .cover:hover::after {
@@ -42,6 +44,7 @@
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover {
+    
     max-width: 768px;
     min-height: 480px;
   }
