--- a/blocks/footer/__links/links.css
+++ b/blocks/footer/__links/links.css
@@ -9,13 +9,13 @@
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 425px) and (max-width: 767x) {
   .footer__links {
     flex-direction: column;
     margin: 25px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 424px) {
   .footer__links {
     flex-direction: column;
     margin: 15px;
