--- a/blocks/region/__paragraph/paragraph.css
+++ b/blocks/region/__paragraph/paragraph.css
@@ -5,8 +5,12 @@
     font-size: 18px;
     line-height: 163%;
     color: #FFFFFF;
-    margin: 0;
+    margin: 0 0 26px 0;
     padding: 0;
+  }
+
+  .region__paragraph:last-child{
+    margin: 0;
   }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {}
@@ -14,6 +18,7 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .region__paragraph {
     font-size: 16px;
+    margin: 0 0 25px 0;
     }
 }
    
