--- a/blocks/lang/__link/link.css
+++ b/blocks/lang/__link/link.css
@@ -1,6 +1,6 @@
 .lang__link {
     max-width: 80px;
-    
+    margin: 0 14px 0 0;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -11,20 +11,23 @@
     color: #FFFFFF;
   }
   .lang__link:hover {
-    opacity: 0.5;
+    opacity: 0.8;
+  }
+  .lang__link:last-child {
+    margin: 0;
   }
 
   @media screen and (min-width: 425px) and (max-width: 767px) {
     .lang__link {
-      max-width: 22px;
-      
-      font-size: 16px;
+      max-width: 69px;
+      margin: 0 15px 0 0;
+      font-size: 17px;      
     }
   }
   @media screen and (max-width: 424px) {
     .lang__link {
-      max-width: 22px;
-      
-      font-size: 16px;
+      max-width: 63px;
+      margin: 0 15px 0 0;
+      font-size: 17px;
     }
   }
