--- a/blocks/footer/__link/link.css
+++ b/blocks/footer/__link/link.css
@@ -14,3 +14,20 @@
   .footer__link:hover {
     opacity: 0.8;
   }
+
+  @media screen and (min-width: 425px) and (max-width: 767px) {
+    .footer__link {
+      font-size: 24px;
+      line-height: 100%;
+    }
+  }
+      
+  @media screen and (max-width: 424px) {
+    .footer__link {
+      font-size: 24px;
+      line-height: 100%;
+      }
+      li {
+        margin-top: 32px;
+      }
+  }
