--- a/blocks/footer/__links/links.css
+++ b/blocks/footer/__links/links.css
@@ -12,12 +12,12 @@
 @media screen and (min-width: 425px) and (max-width: 767x) {
   .footer__links {
     flex-direction: column;
-    margin: 25px;
+    margin: 0 0 48px 16px;
   }
 }
 @media screen and (max-width: 424px) {
   .footer__links {
     flex-direction: column;
-    margin: 15px;
+    margin: 0 0 48px 16px;
   }
 }
