--- a/blocks/header/__lang/lang.css
+++ b/blocks/header/__lang/lang.css
@@ -1,15 +1,15 @@
 .header__lang {
     align-self: flex-end;
-    margin: 0 0 3px 0;
+    margin-bottom: 5px;
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .header__lang {
-    align-self: center;
+    align-self: flex-end;
 }
 }
 @media screen and (max-width: 424px) {
   .header__lang {
-    align-self: center;
+    align-self: flex-end;
   }
 }
