--- a/blocks/infor/__list-text/list-text.css
+++ b/blocks/infor/__list-text/list-text.css
@@ -10,19 +10,18 @@
     margin: 0;
   }
 
-  @media screen and (min-width: 1024px) and (max-width: 1279px) {}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {}
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .infor__list-text {
-    font-size: 8px;
-  }
+    max-width: 382.5px;
+    }
 }
     
 @media screen and (max-width: 424px) {
   .infor__list-text {
     max-width: 288px;
-    font-size: 10px;
     }
 }
