--- a/blocks/infor/__title/title.css
+++ b/blocks/infor/__title/title.css
@@ -17,12 +17,15 @@
     @media screen and (min-width: 425px) and (max-width: 767px) {
       .infor__title {
         font-size: 36px;
+        max-width: 382.5px;
+        line-height: 109%;
         }
     }
         
     @media screen and (max-width: 425px) {
       .infor__title {
       font-size: 32px;
+      line-height: 109%;
       max-width: 288px;
       }
   }
