--- a/blocks/message/__subtitle/subtitle.css
+++ b/blocks/message/__subtitle/subtitle.css
@@ -25,13 +25,14 @@
     .message__subtitle {
       font-size: 18px;
       max-width: 300px;
-      margin: 32px auto 50px;
+      margin: 25px auto 50px;
     }
   }  
   @media screen and (max-width: 424px) {
     .message__subtitle {
-      font-size: 12px;
-      max-width: 258px;
-      margin: 16px auto 40px;
-        }
+      font-size: 16px;
+      line-height: 110%;
+      max-width: 288px;
+      margin: 22px auto 40px;
+      }
   }
