--- a/blocks/message/__title/title.css
+++ b/blocks/message/__title/title.css
@@ -22,6 +22,7 @@
 @media screen and (max-width: 424px) {
   .message__title {
     font-size: 40px;
+    line-height: 104%;
     max-width: 288px;
     }
 }
