--- a/blocks/region/__title/title.css
+++ b/blocks/region/__title/title.css
@@ -25,14 +25,20 @@
    
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .region__title {
-    font-size: 42px;
-   
+    font-size: 38px;
+    line-height: 109%;
+    justify-content: flex-start;
+    align-self: flex-start;
+    margin-left: 22px;
   }
 }
     
 @media screen and (max-width: 424px) {
   .region__title {
-    font-size: 40px;
-   
-  }
+    font-size: 32px;
+    line-height: 109%;
+    justify-content: flex-start;
+    align-self: flex-start;
+    margin-left: 16px;
+   }
 }
