--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,67 +1,32 @@
 .cover {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin: 92px auto;
-    background-image: url('../../sprint-3-images/cover-trains.jpg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    
-    z-index: 0;
-  
-    max-width: 1184px;
-    min-height: 740px;
-    
-
-    text-decoration: none;
-  }
-
-  .cover::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-color: #2A2C2F;
-    opacity: 0.3;
-    
-  }
-
-  .cover:hover::after {
-    position: absolute;
-    background-color: #2A2C2F;
-    opacity: 0.8;
-    z-index: 0;
+  /*FONT-VARIANT: JIS04;*/
+  max-width: 1280px;
+  margin: 92px 0;
 }
-
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover {
     max-width: 1024px;
-    min-height: 640px;
-  }
+    margin: 93px 0;
+    }
 }
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover {
-    
     max-width: 768px;
-    min-height: 480px;
-  }
+    margin: 86px 0 88px;
+    }
 }
    
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .cover {
-    max-width: 425px;
-    min-height: 380px;
-    margin: 76px auto;
-  }
+    min-width: 425px;
+    margin: 76px 0;
+    }
 }
     
 @media screen and (max-width: 424px) {
   .cover {
     min-width: 320px;
-    min-height: 200px;
-    margin: 66px auto;
-  }
+    margin: 76px 0;
+    }
 }
