--- a/blocks/footer/__copyright/copyright.css
+++ b/blocks/footer/__copyright/copyright.css
@@ -7,17 +7,20 @@
     line-height: 114%;
     color: #FFFFFF;
     margin: 0;
+    align-self: self-end;
   }
 
   @media screen and (min-width: 425px) and (max-width: 767px) {
     .footer__copyright {
-      margin: 0 0 0 25px;
+      margin: 0 0 0 16px;
+      align-self: self-start;
     }
   }
       
   @media screen and (max-width: 424px) {
     .footer__copyright {
-      margin: 0 0 0 15px;
+      margin: 0 0 0 16px;
+      align-self: self-start;
     }
   }
 
