--- a/blocks/footer/__link/link.css
+++ b/blocks/footer/__link/link.css
@@ -1,6 +1,4 @@
 .footer__link {
-    /*width: 86px;
-    height: 18px;*/
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -9,7 +7,7 @@
     color: #FFFFFF;
     text-decoration: none;
     padding: 0;
-    margin: 0 18px 0 0;
+    margin: 0;
   }
   .footer__link:hover {
     opacity: 0.8;
@@ -19,6 +17,7 @@
     .footer__link {
       font-size: 24px;
       line-height: 100%;
+      
     }
   }
       
@@ -26,8 +25,6 @@
     .footer__link {
       font-size: 24px;
       line-height: 100%;
-      }
-      li {
-        margin-top: 32px;
+      margin-bottom: 32px;
       }
   }
