--- a/blocks/footer/__links/links.css
+++ b/blocks/footer/__links/links.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     list-style-type: none;
+    gap: 18px;
   }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {}
@@ -12,12 +13,13 @@
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .footer__links {
     flex-direction: column;
-    margin: 0 0 48px 16px;
+    gap: 32px;
   }
 }
 @media screen and (max-width: 424px) {
   .footer__links {
     flex-direction: column;
+    gap: 32px;
     margin: 0 0 48px 16px;
   }
 }
