--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: auto;
+    margin: 0 auto 24px;
     padding: 0;
   
   }
