--- a/blocks/infor/__text/text.css
+++ b/blocks/infor/__text/text.css
@@ -14,15 +14,6 @@
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {}
    
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .infor__text {
-    font-size: 12px;
-  }
-}
+@media screen and (min-width: 425px) and (max-width: 767px) {}
     
-@media screen and (max-width: 424px) {
-  .infor__text {
-  font-size: 16px;
-  max-width: 288px;
-}
-}
+@media screen and (max-width: 424px) {}
