--- a/blocks/cover/__overlay/overlay.css
+++ b/blocks/cover/__overlay/overlay.css
@@ -4,14 +4,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     background-image: url('../../../sprint-3-images/cover-trains.jpg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     z-index: 0;
     max-width: 1184px;
-    /* min-height: 740px; */
+    min-height: 740px;
     text-decoration: none;
   }
 
@@ -47,14 +47,14 @@
    
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .cover__overlay {
-    width: 100%;
-    height: 100%;
+    max-width: 425px;
+    min-height: 265px;
     }
 }
     
 @media screen and (max-width: 424px) {
   .cover__overlay {
-    width: 100%;
-    height: 100%;
-   }
+    min-width: 320px;
+    min-height: 200px;
+  }
 }
