--- a/blocks/cover/__title/title.css
+++ b/blocks/cover/__title/title.css
@@ -2,7 +2,8 @@
     position: static;
     text-align: center;
     padding: 0;
-    margin: 245px auto 16px;
+    margin: 0 auto;
+    /*margin: 245px auto 16px;*/
     max-width: 560px;
     font-family: 'Inter';
     font-style: normal;
@@ -15,13 +16,13 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover__title {
-    margin: 195px auto 16px;
+    /*margin: 195px auto 16px;*/
   }
 }
    
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover__title {
-    margin: 116px auto 16px;
+    /*margin: 116px auto 16px;*/
     }
   }
    
@@ -29,7 +30,7 @@
   .cover__title {
     max-width: 300px;
     font-size: 40px;
-    margin: 45px 0 10px 0;
+    /*margin: 45px 0 10px 0;*/
   }
 }
     
@@ -37,6 +38,6 @@
   .cover__title {
     max-width: 238px;
     font-size: 32px;
-    margin: 33px 0 8px 0;
+    /*margin: 33px 0 8px 0;*/
   }
 }
