--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -13,6 +13,7 @@
     max-width: 1184px;
     min-height: 740px;
     text-decoration: none;
+    gap: 32px;
   }
 
   .cover__overlay::after {
@@ -49,6 +50,7 @@
   .cover__overlay {
     max-width: 425px;
     min-height: 265px;
+    gap: 16px;
     }
 }
     
@@ -56,5 +58,6 @@
   .cover__overlay {
     min-width: 320px;
     min-height: 200px;
+    gap: 16px;
   }
 }
